좋아요 통계 제목 삭제

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -335,7 +335,6 @@
           </div>
 
           <div class="member-section__like-chart">
-            <h1>좋아요 통계!</h1>
             <canvas id="myChart"></canvas>
           </div>
         </section>
