일단버티조 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>일단 버티조!</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
@@ -11,10 +16,10 @@
     <div class="wrapper" id="wrapper">
       <header class="main-header">
         <div class="main-header__temp">
-          <div class="main-team-text"></div>
-          <div class="main-text"></div>
-          <div class="main-text-02"></div>
-          <div class="main-img"></div>
+          <div class="main-team-text fade-in"></div>
+          <div class="main-text fade-in"></div>
+          <div class="main-text-02 fade-in"></div>
+          <div class="main-img fade-in"></div>
         </div>
         <!-- Slider main container -->
         <div class="swiper">
