메인페이지 - 슬라이더 부분 수정 - wrapper width 수정(?)왜..? 커졌지..? - 박스형에 border radius 적용

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -27,8 +27,21 @@
           <div class="swiper-wrapper">
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
-            <div class="swiper-slide">약속</div>
-            <div class="swiper-slide">목표</div>
+            <div class="swiper-slide">
+              <h1 class="slide1-h1">우리팀의 특징</h1>
+              <p class="slide1-p">
+                리더쉽있는 팀장님을 필두로 의지력있는 팀원들이 만나 끈기와 노력을 아끼지 않고, 힘들때는 서로
+                상애상조하며 절대 포기하지 않는 의지를 지니고 있어요 그리고 뛰어난 단결력과 화합성을 바탕으로 의견조율이
+                빠르며 같은 배를 탄 팀원으로써 취업이라는 확고한 목표 달성을 위해 노력하며 서로서로 이끌어 가요.
+              </p>
+            </div>
+            <div class="swiper-slide">
+              <h1 class="slide2-h1">우리팀이 추구하는 목표로는요!</h1>
+              <p class="slide2-p">
+                내배 캠에서 힘들어도 끈기 있게 포기하지 않고 수료하는 것이 목표이고요! 내일 배움 캠프가 끝났을 무렵에는
+                모두 어엿한 개발자가 되어 안정적이며 많은 것을 배울 수 있는 직장으로 취업을 하는 것이 최종목표에요!
+              </p>
+            </div>
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
           </div>
