--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -17,8 +17,12 @@
       <header class="main-header">
         <div class="main-header__temp">
           <div class="main-team-text fade-in"></div>
-          <div class="main-text fade-in"></div>
-          <div class="main-text-02 fade-in"></div>
+          <div class="main-text fade-in">
+            <h1>일단</h1>
+          </div>
+          <div class="main-text-02 fade-in">
+            <h1>버티조</h1>
+          </div>
           <div class="main-img fade-in"></div>
         </div>
         <!-- Slider main container -->
@@ -341,7 +345,8 @@
             <div class="member-section__like-area__container">
               <img class="member-section__like-area-image" src="./images/main/Welcome.png" alt="" />
               <h2 class="member-section__like-area-title">
-                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를 선택해주세요.🫰
+                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를
+                선택해주세요.🫰
               </h2>
               <img class="member-section__like-area-underline" src="/images/main/Underline 1.svg" alt="" />
             </div>
