--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
             <div class="member-section__like-area__container">
               <img class="member-section__like-area-image" src="./images/main/Welcome.png" alt="" />
               <h2 class="member-section__like-area-title">
-                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를 선택해주세요.
+                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를
+                선택해주세요.🫰
               </h2>
               <img class="member-section__like-area-underline" src="./images/main/Underline 1.svg" alt="" />
             </div>
