강지향 개인 이미지 경로 수정

--- a/kang.html
+++ b/kang.html
@@ -21,7 +21,7 @@
         <header id="header">
             <a href="./index.html" class="home">
                 <h1 class="hd-team-name">
-                    <img src="/images/kang/home_icon-icons.com_73532.svg" alt="홈 이미지">
+                    <img src="./images/kang/home_icon-icons.com_73532.svg" alt="홈 이미지">
                     일단버티조
                 </h1>
             </a>
