최광희 좋아요 버튼 애니메이션 수정

--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
               <div>
                 <button class="member-section__like-card" id="member-section__like-btn1">
                   <img width="130" height="180" alt="" />
+                  <img class="likeimg hidden-like" src="./images/main/like-img1.png" width="100" height="100"alt="" />
                 </button>
               </div>
               <div>
