멤버카드 애니메이션 등록

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,11 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
       integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
+      integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -63,7 +68,7 @@
 
       <main class="member-section">
         <!--사랑스런 팀원 자랑 시작!-->
-        <section class="member-section__cards">
+        <section class="member-section__cards scroll-spy">
           <div>
             <div>
               <h2>Only Jonbeo is life way</h2>
@@ -79,13 +84,13 @@
 
           <div>
             <!--권경열-->
-            <div class="member-section__card">
+            <div class="member-section__card back-to-position to-right delay-1">
               <span>팀장</span>
               <div>
                 <a href="./yeol.html">
-                  <div class="member-section__card-img"></div>
+                  <div class="member-section__card-img back-to-position to-right delay-1"></div>
                 </a>
-                <div class="member-section__card__info">
+                <div class="member-section__card__info back-to-position to-right delay-2">
                   <div>
                     <div>
                       <span>이름:</span>
@@ -128,13 +133,13 @@
               </div>
             </div>
             <!--최광희-->
-            <div class="member-section__card">
+            <div class="member-section__card back-to-position to-right delay-2">
               <span>팀원</span>
               <div>
                 <a href="./choi.html">
-                  <div class="member-section__card-img"></div>
+                  <div class="member-section__card-img back-to-position to-right delay-2"></div>
                 </a>
-                <div class="member-section__card__info">
+                <div class="member-section__card__info back-to-position to-right delay-3">
                   <div>
                     <div>
                       <span>이름:</span>
@@ -177,13 +182,13 @@
               </div>
             </div>
             <!--전지현-->
-            <div class="member-section__card">
+            <div class="member-section__card back-to-position to-right delay-3">
               <span>팀원</span>
               <div>
                 <a href="./jihyun.html">
-                  <div class="member-section__card-img"></div>
+                  <div class="member-section__card-img back-to-position to-right delay-3"></div>
                 </a>
-                <div class="member-section__card__info">
+                <div class="member-section__card__info back-to-position to-right delay-4">
                   <div>
                     <div>
                       <span>이름:</span>
@@ -239,13 +244,13 @@
               </div>
             </div>
             <!--강지향-->
-            <div class="member-section__card">
+            <div class="member-section__card back-to-position to-left delay-1">
               <span>팀원</span>
               <div>
                 <a href="./kang.html">
-                  <div class="member-section__card-img"></div>
+                  <div class="member-section__card-img back-to-position to-left delay-1"></div>
                 </a>
-                <div class="member-section__card__info">
+                <div class="member-section__card__info back-to-position to-left delay-2">
                   <div>
                     <div>
                       <span>이름:</span>
@@ -288,13 +293,13 @@
               </div>
             </div>
             <!--정효창-->
-            <div class="member-section__card">
+            <div class="member-section__card member-section__card back-to-position to-left delay-2">
               <span>팀원</span>
               <div>
                 <a href="./chang.html">
-                  <div class="member-section__card-img"></div>
+                  <div class="member-section__card-img back-to-position to-left delay-2"></div>
                 </a>
-                <div class="member-section__card__info">
+                <div class="member-section__card__info back-to-position to-left delay-3">
                   <div>
                     <div>
                       <span>이름:</span>
@@ -345,8 +350,7 @@
             <div class="member-section__like-area__container">
               <img class="member-section__like-area-image" src="./images/main/Welcome.png" alt="" />
               <h2 class="member-section__like-area-title">
-                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를
-                선택해주세요.🫰
+                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를 선택해주세요.🫰
               </h2>
               <img class="member-section__like-area-underline" src="./images/main/Underline 1.svg" alt="" />
             </div>
