--- a/choi.html
+++ b/choi.html
@@ -22,58 +22,84 @@
         <div>
             <h3 class="myname">최광희 입니다.</h3>
             <h5 class="myResolution">끝까지 포기하지 않고 열심히 하겠습니다.</h5>
-            <hr color="white" size="6px">
+            <hr color="white" size="3px">
         </div>
         <div class="menubox">
             <div>
                 <h5> 나의 MBTI 및 성격</h5>
-                <p class="textbox"> 저의 MBTI는 INFJ입니다. 성실하다고 많이 듣지만 귀찮아 할때도 많아요. 하지만, 항상 열심히 하고싶어하고 노력하는 성격입니다. 생각이 많고 항상 다른 사람을 배려하려고 내가 도움을 줄 수 있는게 있으면 먼저 다가서고 싶어합니다. 많은 격려 부탁드립니다.</p>
+                <p class="textbox"> 저의 MBTI는 INFJ입니다. 성실하다고 많이 듣지만 귀찮아 할때도 많아요.<br>
+                    하지만, 항상 열심히 하고싶어하고 노력하는 성격입니다. 생각이 많고 항상 다른 사람을 배려하려고 내가 도움을 줄 수 있는게 있으면 먼저 다가서고 싶어합니다.<br>
+                    많은 격려 부탁드립니다.</p>
                 <label for="floatingInput"></label>
             </div>
         </div>
         <div class="menubox">
             <div>
                 <h5> 나의 장점</h5>
-                <p class="textbox"> 다른 사람의 이야기를 경청할줄 알며, 그 사람의 입장에 대해서 이해하려 노력하기에 최대한 좋은 방향으로 상담을 잘 합니다. 그리고 저 또한 타인의 입장에서 저의 잘못된 점이 있을때 인정할줄 알고 고치려고 노력합니다. 항상 감사하려하고 먼저 사과할줄 아는 사람입니다.</p>
+                <p class="textbox"> 다른 사람의 이야기를 경청할줄 알며, 그 사람의 입장에 대해서 이해하려 노력하기에 최대한 좋은 방향으로 상담을 잘 합니다.<br>
+                    그리고 저 또한 타인의 입장에서 저의 잘못된 점이 있을때 인정할줄 알고 고치려고 노력합니다.<br>
+                    항상 감사하려하고 먼저 사과할줄 아는 사람입니다.</p>
                 <label for="floatingInput"></label>
             </div>
         </div>
         <div class="menubox">
             <h5> 나의 협업 스타일</h5>
-            <p class="textbox"> 다른 사람의 의견을 최대한 수용하려는 마음가짐이 있으며, 의사 소통에 있어서는 자신있습니다. 어떠한 문제가 발생 하였을때, 긍정적인 마인드로 일을 해결하려하고 포기하지 않고 다양한 방법으로 생각하려 합니다. 이전 회사에 있을때 장비에 대해 문제가 발생하였으나, 많은 사람들이 몇일을 두고도 해결이 되지 않아 포기하려 했던 경우가 있었습니다. 저는 틈 날때마다 문제가 왜 발생하는 것인지 처음부터 하나하나씩 생각하여 결국은 누구도 생각지 못한 곳 이었던 눈으로는 정상적이지만 실질적으로는 문제가 있던 것을 발견 하였고 그것을 해결한적이 있습니다.</p>
+            <p class="textbox"> 다른 사람의 의견을 최대한 수용하려는 마음가짐이 있으며, 의사 소통에 있어서는 자신있습니다. 어떠한 문제가 발생 하였을때, 긍정적인 마인드로 일을 해결하려하고
+                포기하지 않고 다양한 방법으로 생각하려 합니다.<br>
+                이전 회사에 있을때 장비에 대해 문제가 발생하였으나, 많은 사람들이 몇일을 두고도 해결이 되지 않아 포기하려 했던 경우가 있었습니다.<br>
+                저는
+                틈 날때마다 문제가 왜 발생하는 것인지 처음부터 하나하나씩 생각하여 결국은 누구도 생각지 못한 곳 이었던 눈으로는 정상적이지만 실질적으로는 문제가 있던 것을 발견 하였고 그것을 해결한적이
+                있습니다.</p>
             <label for="floatingInput"></label>
         </div>
-        <hr color="white" size="6px">
-        <h5 class="commentbox">방명록</h5>
-        <form name="f">
-            <table id="t1">
+        <hr color="white" size="3px">
+        <div class="comment-container">
+            <h5 class="commentbox">방명록</h5>
+            <form name="f" id="t1">
+                <table>
+                    <tr>
+                        <textarea type="text" class="content" id="content" rows="4" cols="1"></textarea>
+                    </tr>
+                    <tr>
+                        <th class="writer">작성자</th>
+                        <td>
+                            <input type="text" name="writer" id="writer">
+                        </td>
+                        <th class="password">비밀번호</th>
+                        <td>
+                            <input type="password" name="pwd" id="pwd">
+                        </td>
+                        <td>
+                            <input type="button" class="submitbtn" id="savebtn" value="작성">
+                        </td>
+                    </tr>
+                </table>
+            </form>
+            <div id="list"></div>
+            <!-- 수정폼 -->
+            <table id="editf" style="display: none;">
                 <tr>
-                    <textarea type="text" class="content" id="content" rows="4" cols="1"
-                        style="height: 70px;"></textarea>
+                    <th>작성자</th>
+                    <td><input type="text" name="editwriter" id="editwriter"></td>
                 </tr>
                 <tr>
-                    <th class="writer">작성자</th>
-                    <td>
-                        <input type="text" name="writer" id="writer">
-                    </td>
-                    <th class="password">비밀번호</th>
-                    <td>
-                        <input type="password" name="pwd" id="pwd">
-                    </td>
-                    <td>
-                        <input type="button" class="submitbtn" id="savebtn" value="작성">
+                    <th>글 비밀번호</th>
+                    <td><input type="password" name="editpwd" id="editpwd"></td>
+                </tr>
+                <tr>
+                    <th>내용</th>
+                    <td><input type="text" name="editcontent" id="editcontent"></td>
+                </tr>
+                <tr>
+                    <th>수정완료</th>
+                    <td><input type="button" value="수정완료" id="editbtn">
+                        <input type="button" value="취소">
                     </td>
                 </tr>
             </table>
-        </form>
-        <hr color="white" size="6px">
-        <div id="list">
         </div>
-    </div>
-    </div>
-
-    <script type="module" src="./js/choi_firebase.js"></script>
-    <script type="module" src="./js/choi.js"></script>
+        <script type="module" src="./js/choi_firebase.js"></script>
+        <script type="module" src="./js/choi.js"></script>
 </body>
 
 </html>
