메인 페이지 - 좋아요 투표버튼 클릭시 르탄이 출력

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -350,36 +350,41 @@
             <div class="member-section__like-area__container">
               <img class="member-section__like-area-image" src="./images/main/Welcome.png" alt="" />
               <h2 class="member-section__like-area-title">
-                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를 선택해주세요.🫰
+                함께 물 한잔하고 하고싶은 <span class="member-section__like-area-keyword">존버러</span>를
+                선택해주세요.🫰
               </h2>
               <img class="member-section__like-area-underline" src="./images/main/Underline 1.svg" alt="" />
             </div>
             <!-- 멤버 카드 및 좋아요 버튼!-->
-            <div class="member-section__like-cardarea">
+            <div class="member-section__like-card-area">
               <div>
                 <button class="member-section__like-card" id="member-section__like-btn1">
                   <img width="130" height="180" alt="" />
-                  <img class="likeimg hidden-like" src="./images/main/like-img1.png" width="100" height="100"alt="" />
+                  <img class="likeimg" src="./images/main/like-img1.png" alt="" />
                 </button>
               </div>
               <div>
                 <button class="member-section__like-card" id="member-section__like-btn2">
                   <img width="130" height="180" alt="" />
+                  <img class="likeimg" src="./images/main/like-img1.png" alt="" />
                 </button>
               </div>
               <div>
                 <button class="member-section__like-card" id="member-section__like-btn3">
                   <img width="130" height="180" alt="" />
+                  <img class="likeimg" src="./images/main/like-img1.png" alt="" />
                 </button>
               </div>
               <div>
                 <button class="member-section__like-card" id="member-section__like-btn4">
                   <img width="130" height="180" alt="" />
+                  <img class="likeimg" src="./images/main/like-img1.png" alt="" />
                 </button>
               </div>
               <div>
                 <button class="member-section__like-card" id="member-section__like-btn5">
                   <img width="130" height="180" alt="" />
+                  <img class="likeimg" src="./images/main/like-img1.png" alt="" />
                 </button>
               </div>
             </div>
