메인페이지 컬러 변경

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <h1>존버한자들이<br />승리하리라.</h1>
               <img src="./images/main/Loop%202.svg" alt="존벜ㅋ" class="loop-image" />
 
-              <span>어떠한 <strong>에러</strong>에도 굴복하지 않는</span>
+              <span>어떠한 <strong class="member-section__cards-strong">에러</strong>에도 굴복하지 않는</span>
               <span>프로존버러 5인!</span>
             </div>
             <img src="./images/main/searching.png" alt="" class="searching-image" />
