--- a/kang.html
+++ b/kang.html
@@ -39,7 +39,7 @@
           부족한 지식을 보충할 예정이고 국비지원 웹개발 과정이나,<br />
           부트캠프 프론트엔드 과정을 통해 프로그래밍의 언어를<br />
           배워왔습니다 앞으로도 꿈을 위해 열심히 도전하고 배워나가겠습니다<br />
-          잘부탁드립니다 > 3<
+          잘부탁드립니다 &gt; 3&lt;
         </p>
       </header>
       <!-- 메인부분 -->
@@ -90,7 +90,7 @@
         <hr />
         <!-- 방명록 작성 부분 -->
         <article id="guest-book">
-          <form action="" method="post" id="inputForm">
+          <form method="post" id="inputForm">
             <h3>방명록 작성</h3>
             <label for="gb-name">이름</label>
             <input type="text" id="gb-name" class="gb-name" placeholder="닉네임을 입력해주세요." />
